k8s/network-policies/nodejs-app-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nodejs-app-ingress
  namespace: microservices
spec:
  podSelector:
    matchLabels:
      app: nodejs-app
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 3000
          protocol: TCP
